# streamer

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-24-streaming-server.md  2026-05-25-content-notes.md
docs/superpowers/specs/: 2026-05-23-streaming-server-design.md  2026-05-25-ai-curator-design.md  2026-05-25-content-notes-design.md
src/streamer/: __init__.py  __main__.py  catalog.py  config.py  context.py  curator.py  dj.py  pipeline.py  scanner.py  server.py  state.py
src/streamer/templates/: browse.html  index.html  play.html
tests/: conftest.py  test_catalog.py  test_context.py  test_curator.py  test_dj.py  test_pipeline.py  test_scanner.py  test_server.py  test_state.py
