[project]
name = "streamer"
version = "0.1.0"
description = "Local network audio streaming server with web control panel and AI DJ"
readme = "README.md"
authors = [
    { name = "stevo399", email = "57786372+stevo399@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-httpauth>=4.8.1",
    "google-cloud-texttospeech>=2.36.0",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
]

[project.scripts]
streamer = "streamer:main"
streamer-hashpw = "streamer:hashpw"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
